package edu.fiuba.algo3.modelo.Colors;

public class Blue extends PlayerColor {
    public PlayerColor swapColor(){
        return new Red();
    }
}
