package edu.fiuba.algo3.modelo.Colors;

public class Green extends PlayerColor {
    @Override
    public PlayerColor swapColor() {
        return this;
    }
}
